# backend-starter

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
accounts/: admin.py  models.py
accounts/migrations/: 0001_initial.py
config/: settings.py  urls.py
