[project]
name = "backend"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.5",
    "environs[django]>=14.1.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
  # Ignore missing docstrings 
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  # Docstring format preferences
  "D203",
  "D213",
  # Allow fixme and todo comments
  "FIX001",
  "FIX002",
]
select = ["ALL"]

[tool.ruff.lint.isort]
force-single-line = true
